--- a/src/app/bookinglist/bookinglist.component.html
+++ b/src/app/bookinglist/bookinglist.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-    <form (ngSubmit)="userIdVal()">
+    <!--<form (ngSubmit)="userIdVal()">
         <input type="email" name="emailId" placeholder="email id" [(ngModel)]=userId>&NonBreakingSpace;&NonBreakingSpace;
         <button class="btn btn-danger">get your booking details</button><hr>
-        </form>
+        </form>-->
     <ul class="list-group" style="list-style-type:none;" *ngFor="let b of bookings;let i=index">
         <li>
         <div class="card">
