--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -21,7 +21,7 @@
                 </td>
               </table>
         </div>
-        <div class="card-footer"><button class="btn btn-dark"><a  class="nav-link" [routerLink]="['/login']" style="color: floralwhite;"><h6>BOOK TICKET</h6></a></button></div>
+        <div class="card-footer"><button class="btn btn-dark" style="color: floralwhite;" (click)="nextPage()"><h6>BOOK TICKET</h6></button></div>
     </div>
 
 </div>
