--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 <div class="container">
-    <div class="card">
+    <div class="card" id="card">
         <div class="card-header"></div>
         <div class="card-body">
             <hr>
@@ -13,7 +13,7 @@
                 <h4>SCREEN : {{show.screen}}</h4>
             <hr>
         </div>
-        <div class="card-footer">booking id</div>
+        <div class="card-footer">{{booking.bookingId}}</div>
     </div>
 
 </div>
