--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="jumbotron">
   <div class="container text-center" style="color: rgb(226, 187, 12); ">
     <h1 style="font-family: fantasy;">BOX OFFICE</h1>      
@@ -9,9 +10,10 @@
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <ul class="navbar-nav">
        <li class="nav-item"><a  class="nav-link" [routerLink]="['home']"><h6><i class="fas fa-home"></i></h6></a></li> 
-       <li class="nav-item"><a  class="nav-link" [routerLink]="['signup']"><h6>SIGN UP</h6></a></li>
-     <!-- <li class="nav-item"><a  class="nav-link" [routerLink]="['login']"><h6> LOGIN</h6></a></li>-->
-      <li class="nav-item"><a  class="nav-link" [routerLink]="['bookingList']"><h6> BOOKING DETAILS</h6></a></li>
+       <li class="nav-item"><a  class="nav-link"><h6><i class="fas fa-user"   (click)="nextPage()"></i></h6></a></li> 
+     <li class="nav-item"><a  class="nav-link"><h6 style=" color: ivory;">Hello {{user.userName}}</h6></a></li>
+     <li class="nav-item" style="position: absolute; right: 40px;"><a  class="nav-link"><h6><i class="fas fa-power-off" (click)="signout()"></i></h6></a></li>
+      <li class="nav-item"><a  class="nav-link" [routerLink]="['bookingList']"><h6><i class="fa fa-ticket" style="font-size: 24px;"></i></h6></a></li>
       <li class="nav-item" style="position: absolute; right: 10px;"><a  class="nav-link" [routerLink]="['/admin']"><h6><i class="fas fa-cog"></i></h6></a></li>
  </ul>
 </nav>  
