--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,9 @@
 <div class="container">    
     <div class="row">
       <div class="col-sm-4" *ngFor="let m of movies; let i=index" style="padding: 20px;">
-        <div class="card">
-          <div class="card-header" style="text-align: center;"><h4> {{m.movieName}} </h4></div>
+        <div class="card" style=" background-color: lemonchiffon;">
+          <div class="card-header" style="text-align: center; font-size: inherit;"><h4> {{m.movieName}} </h4></div>
           <div class="card-body"><img src="/assets/{{i+1}}.gif" class="img-responsive" style="width:100%; height: 250px;" alt="Image" (click)="nextPage(m.movieId,i)"></div>
-          <div class="card-footer"></div>
         </div>
       </div>
     </div>
