--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,7 +1,8 @@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 <div class="container">
     <div class="card" style="background-color: floralwhite; width: 500px;">
         <div class="card-body">
-            <h6 style="color: darkblue; font-style: italic;">VISA</h6>
+            <h6 style="color: darkblue; font-style: italic;"><i class="fab fa-cc-discover" style="font-size: 20px;"></i>&NonBreakingSpace;<i class="fab fa-cc-visa" style="font-size: 20px;"></i>&NonBreakingSpace;<i class="fab fa-cc-mastercard" style="font-size: 20px;"></i></h6>
 <form (ngSubmit)="nextpage()" class="was-validated">
 
     <div class="form-group">
@@ -9,15 +10,15 @@
         <div class="valid-feedback">Valid.</div>
         </div>
     <div class="form-group">
-    <input type="number" placeholder="Card Number" class="form-control" required>
+    <input type="number" name="cardNo" placeholder="Card Number" class="form-control" [(ngModel)]=cardNo required>
     <div class="valid-feedback">Valid.</div>
     </div>
     <div class="form-group">
-    <input type="number" placeholder="CVV" class="form-control" required>
+    <input type="number" name="cardCVV" placeholder="CVV" class="form-control" [(ngModel)]=cardCVV required>
     <div class="valid-feedback">Valid.</div>
     </div>
     <div class="form-group">
-    <input type="date" placeholder="Expiry Date" class="form-control" required>
+    <input type="month" min="2022-12" name="expiryDate" placeholder="Expiry Date" class="form-control" required>
     <div class="valid-feedback">Valid.</div>
     </div>
     <button type="submit" class="btn btn-dark">PAY</button>
