--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -10,11 +10,11 @@
         <div class="valid-feedback">Valid.</div>
         </div>
     <div class="form-group">
-    <input type="number" name="cardNo" placeholder="Card Number" class="form-control" [(ngModel)]=cardNo required>
+    <input type="text" name="cardNo" maxlength="12" minlength="12" placeholder="Card Number" class="form-control" [(ngModel)]=cardNo required>
     <div class="valid-feedback">Valid.</div>
     </div>
     <div class="form-group">
-    <input type="number" name="cardCVV" placeholder="CVV" class="form-control" [(ngModel)]=cardCVV required>
+    <input type="text" name="cardCVV" maxlength="3" minlength="3" placeholder="CVV" class="form-control" [(ngModel)]=cardCVV required>
     <div class="valid-feedback">Valid.</div>
     </div>
     <div class="form-group">
