--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
     <ul class="navbar-nav">
        <li class="nav-item"><a  class="nav-link" [routerLink]="['home']"><h6><i class="fas fa-home"></i></h6></a></li> 
        <li class="nav-item"><a  class="nav-link"><h6><i class="fas fa-user"   (click)="nextPage()"></i></h6></a></li> 
-     <li class="nav-item"><a  class="nav-link"><h6 style=" color: ivory;">Hello {{user.userName}}</h6></a></li>
+     <li class="nav-item"><a  class="nav-link" (click)="reloadPage()"><h6 style=" color: ivory;">Hello {{user.userName}}</h6></a></li>
      <li class="nav-item" style="position: absolute; right: 40px;"><a  class="nav-link"><h6><i class="fas fa-power-off" (click)="signout()"></i></h6></a></li>
       <li class="nav-item"><a  class="nav-link" [routerLink]="['bookingList']"><h6><i class="fa fa-ticket" style="font-size: 24px;"></i></h6></a></li>
       <li class="nav-item" style="position: absolute; right: 10px;"><a  class="nav-link" [routerLink]="['/admin']"><h6><i class="fas fa-cog"></i></h6></a></li>
