--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -3,9 +3,7 @@
     <div class="card-w-50">
         <div class="card-heading" style="color: floralwhite; margin-left: 20px;"><h3>{{movie.movieName}}</h3></div>
         <div class="card-body">
-            <iframe style="width: 650px; height: 200px; position: relative;"
-            src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
-            </iframe>
+          <iframe width="560" height="315" [src]="str" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <table class="table table-stripped">
                 <th>
                   <tr>director</tr>
