--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -10,15 +10,15 @@
         <div class="valid-feedback">Valid.</div>
         </div>
     <div class="form-group">
-    <input type="text" name="cardNo" maxlength="12" minlength="12" placeholder="Card Number" class="form-control" [(ngModel)]=cardNo required>
+    <input type="text" name="cardNo" maxlength="12" minlength="12" placeholder="Card Number" class="form-control" [(ngModel)]=cardNo payments-validate="card" payments-format="card" required>
     <div class="valid-feedback">Valid.</div>
     </div>
     <div class="form-group">
-    <input type="text" name="cardCVV" maxlength="3" minlength="3" placeholder="CVV" class="form-control" [(ngModel)]=cardCVV required>
+    <input type="text" name="cardCVV" maxlength="3" minlength="3" placeholder="CVV" class="form-control" [(ngModel)]=cardCVV payments-validate="cvc" payments-format="cvc" required>
     <div class="valid-feedback">Valid.</div>
     </div>
     <div class="form-group">
-    <input type="month" min="2022-12" name="expiryDate" placeholder="Expiry Date" class="form-control" required>
+    <input type="month" min="2022-12" name="expiryDate" placeholder="Expiry Date" class="form-control" payments-validate="expiry" payments-format="expiry" required>
     <div class="valid-feedback">Valid.</div>
     </div>
     <button type="submit" class="btn btn-dark">PAY</button>
