--- a/src/app/seats/seats.component.html
+++ b/src/app/seats/seats.component.html
@@ -72,7 +72,7 @@
                         <td>
                             <tr>{{show.showDate}}</tr><hr>
                             <tr>{{show.showTime}}</tr><hr>
-                            <tr *ngFor="let seat of finalSeats">{{seat.seatNo}}<hr></tr>
+                            <tr *ngFor="let seat of finalSeats"><span class="box">{{seat.seatNo}}</span></tr>
                         </td>
                     </table>
                 </div>
